--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "swr": "^2.1.0",
     "zustand": "^4.3.6"
   }
 }
